move the patching logic to api server

--- a/pyjail_ad/templates/base.html
+++ b/pyjail_ad/templates/base.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>{% block title %}{% endblock %}</title>
+		<link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" />
+	</head>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" />
-</head>
-
-<body>
-    <header>
-        <h1>Pyjail AD</h1>
-    </header>
-    {% block content %}{% endblock %}
-</body>
-
+	<body>
+		<header>
+			<h1>Pyjail AD</h1>
+		</header>
+		{% with messages = get_flashed_messages() %} {% if messages %}
+		<section class="container">
+			{% for msg in messages %}
+			<p>{{ msg }}</p>
+			{% endfor %}
+		</section>
+		{% endif %} {% endwith %} {% block content %}{% endblock %}
+	</body>
 </html>
