implement patch viewer

--- a/pyjail_ad/templates/base.html
+++ b/pyjail_ad/templates/base.html
@@ -12,6 +12,7 @@
 		<header>
 			<h1>Pyjail AD</h1>
 		</header>
+		<noscript><h1>Please enable JavaScript to use this website.</h1></noscript>
 		{% with messages = get_flashed_messages() %} {% if messages %}
 		<section class="container">
 			{% for msg in messages %}
