--- a/pyjail_ad/templates/base.html
+++ b/pyjail_ad/templates/base.html
@@ -10,6 +10,12 @@
 
 	<body>
 		<header>
+			<nav>
+				<a href="/">Home</a>
+				<a href="/panel">Panel</a>
+				<a href="/help">Help</a>
+				<a href="/logout">Logout</a>
+			</nav>
 			<h1>Pyjail AD</h1>
 		</header>
 		<noscript><h1>Please enable JavaScript to use this website.</h1></noscript>
