--- a/pyjail_ad/templates/help.html
+++ b/pyjail_ad/templates/help.html
@@ -4,7 +4,7 @@
         <h3>規則</h3>
         <ol>
             <li>請勿攻擊此網頁</li>
-            <li>請問實行任何 DoS 類型的攻擊</li>
+            <li>請勿實行任何 DoS 類型的攻擊</li>
         </ol>
     </section>
     <section>
